--- a/SoccerManagerApi/SoccerManagerApi.csproj
+++ b/SoccerManagerApi/SoccerManagerApi.csproj
@@ -28,4 +28,8 @@
     <ProjectReference Include="..\Data\Data.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Mappers\" />
+  </ItemGroup>
+
 </Project>
